--- a/SesRegatesMenuManagement/Info.plist
+++ b/SesRegatesMenuManagement/Info.plist
@@ -5,7 +5,7 @@
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
-		<string>White</string>
+		<string>SRWhite</string>
 		<key>UIImageName</key>
 		<string>Launch</string>
 	</dict>
